# xai

./: .gitignore  AGENTS.md  README.md  REPO_SPEC.md  data_registry.yaml  pyproject.toml
.agents/: PLANS.md
.codex/: config.toml
.codex/agents/: explorer.toml  patchcore-worker.toml  reviewer.toml  worker.toml  xai-architect.toml
.github/workflows/: ci.yml
data/: data_registry.yaml  ieee_candidates.yaml
docs/: ARCHITECTURE.md  CODEx_WORKFLOW.md  DATASETS.md  DATA_PERMISSION_MATRIX.md  DATA_REPLICATION_WORKFLOW.md  DATA_REQUIREMENTS.md  DEMO_CATALOGUE.md  DEMO_STATUS.md  IEEE_DATA_SCOUTING.md  PATCHCORE_NOTES.md  REVIEW_GUIDE.md  STYLE_GUIDE.md  TESTING.md  TODO.md  XAI_CONTRACT.md
docs/codex/: ACTIVE_CONTEXT.md  ARCHITECTURE.md  COMMANDS.md  HANDOFF_TEMPLATE.md  PROJECT_MAP.md  SAFETY_RULES.md  SESSION_LOG.md  TASK_TEMPLATE.md  USING_CODEX.md  WORKFLOW.md
docs/decisions/: ADR-0001-demo-philosophy.md  ADR-0002-notebook-policy.md  ADR-0003-explanation-contract.md
docs/references/: shap_notebook_review.md
docs/runbooks/: add_dataset.md  add_demo.md  cut_release.md
docs/tasks/: TASK_TEMPLATE.md
notebooks/: 00_overview.ipynb  00_overview.py  01_waterbirds_shortcut.ipynb  01_waterbirds_shortcut.py  02_industrial_shortcut_trap.ipynb  02_industrial_shortcut_trap.py  03_patchcore_mvtec_ad.ipynb  03_patchcore_mvtec_ad.py  03_patchcore_mvtec_bottle.ipynb  04_patchcore_wrong_normal.ipynb  04_patchcore_wrong_normal.py  05_patchcore_count_limit.ipynb  05_patchcore_count_limit.py  06_patchcore_severity_limit.ipynb  06_patchcore_severity_limit.py  07_patchcore_loco_logic_limit.ipynb  07_patchcore_loco_logic_limit.py  08_explanation_drift.ipynb  08_explanation_drift.py  README.md
notebooks/data_scouting/: 90_ieee_dataset_scouting.ipynb
notebooks/global_local_explainability/: 09_global_vs_local_explainability_shap.ipynb
notebooks/overview/: 00_overview.ipynb
notebooks/patchcore_explainability/: 03_patchcore_mvtec_ad.ipynb  04_patchcore_wrong_normal.ipynb
notebooks/patchcore_limits/: 05_patchcore_count_limit.ipynb  06_patchcore_severity_limit.ipynb  07_patchcore_loco_logic_limit.ipynb
notebooks/robustness_drift/: 08_explanation_drift.ipynb
notebooks/shortcut_lab/: 00_moons_stars_clever_hans.ipynb  (+1 more)
outputs/: index.html
scripts/: audit_data_inventory.py
xai-demo-slides/: Makefile  README.md  requirements.txt
(+210 files in other folders)
